--- a/about.html
+++ b/about.html
@@ -12,8 +12,12 @@
 </head >
  <body class="about" id="about">
  <script id="nav" src="JScripts/nav.js"></script>
- <main>
-     <header><h1>About Us</h1></header>
+ <main>  
+ <article>
+	 <p class="subheading">
+                <span>About Us</span>
+            </p>
+	</article>
      <article>
 
          FIFA worlc cup trivia is a a quiz on FIFA world Cup compettion over the years.
