--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,18 @@
 <body class="contact" id="contact">
     <script id="nav" src="JScripts/nav.js"></script>
     <main>
-        <h1>Contact Us</h1>
+    <article>
+	 <p class="subheading">
+                <span>Contact Us</span>
+            </p>
+	</article>
+	<article>
         Please feel free to contact me with any questions or concerns you may have.  My contact information is displayed below.
         <p><a href="mailto:krisstephenson@gmail.com">Send email</a></p>
         <p><a href="tel:+8765676700">+(876)567-6700</a></p>
+	</article>
     </main>
+	
     <script id="footer" src="JScripts/footer.js"></script>
 </body>
 </html>
