--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="Styles/nav.css">
     <link rel="stylesheet" href="Styles/footer.css">
     <link rel="stylesheet" href="Styles/Contact.css">
+	<link rel="stylesheet" href="Styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -14,8 +15,8 @@
     <main>
     <article>
 	 <p class="subheading">
-                <span>Contact Us</span>
-            </p>
+           <span>Contact Us</span>
+     </p>
 	</article>
 	<article>
         Please feel free to contact me with any questions or concerns you may have.  My contact information is displayed below.
