--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
      </p>
 	</article>
 	<article>
-        Please feel free to contact me with any questions or concerns you may have.  My contact information is displayed below.
+        <P class="bodytext">Please feel free to contact me with any questions or concerns you may have.  My contact information is displayed below.</P>
         <p><a href="mailto:krisstephenson@gmail.com">Send email</a></p>
         <p><a href="tel:+8765676700">+(876)567-6700</a></p>
 	</article>
