--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
 	</article>
 	<article>
         <p class="bodytext">Please feel free to contact me with any questions or concerns you may have.  My contact information is displayed below.</p>
-        <p><a href="mailto:krisstephenson@gmail.com">Send email</a></p>
-        <p><a href="tel:+8765676700">+(876)567-6700</a></p>
+        <p class="bodytext"><a href="mailto:krisstephenson@gmail.com">Send email</a></p>
+        <p class="bodytext"><a href="tel:+8765676700">+Dial (876)567-6700</a></p>
 	</article>
     </main>
 	
