--- a/about.html
+++ b/about.html
@@ -19,17 +19,17 @@
             </p>
 	</article>
      <article>
-
-         FIFA worlc cup trivia is a a quiz on FIFA world Cup compettion over the years.
+         <p class="bodytext">FIFA world cup trivia is a a quiz on FIFA world Cup competion over the years.</p>
      </article>
      <article>
-         The quiz will have Ten(1) trivia questions on FIFA world cup from 1930 to present.
+         <p class="bodytext">The quiz consists of Ten(10) trivia questions on FIFA world cup from 1930 to present.</br>
+		 Each answer has been verified by the highest sources for accuracy</p>
      </article>
      <article>
-         The quiz page is very interactive  has a unique feel, thanks to the various codes and lessons taught at Edinburg Napier.
-
-         The great attention to detail and interactivity also reflect the time dedicated to he site and focus of the developer.
-     </article>
+         <p class="bodytext">The quiz page is very interactive  has a unique feel, thanks to the various codes and lessons taught at Edinburg Napier.
+         The great attention to detail and interactivity also reflect the time dedicated to the site, and focus of the developer.
+		</p>
+	 </article>
  </main>
     <script src="JScripts/QuizTimer.js"></script>
 
