--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
          <p class="bodytext">FIFA world cup trivia is a a quiz on FIFA world Cup competion over the years.</p>
      </article>
      <article>
-         <p class="bodytext">The quiz consists of Ten(10) trivia questions on FIFA world cup from 1930 to present.</br>
-		 Each answer has been verified by the highest sources for accuracy</p>
+         <p class="bodytext">The quiz consists of Ten(10) trivia questions on FIFA world cup from 1930 to present.</p>
+		 <p class="bodytext">Each answer has been verified by the highest sources for accuracy</p>
      </article>
      <article>
          <p class="bodytext">The quiz page is very interactive  has a unique feel, thanks to the various codes and lessons taught at Edinburg Napier.
