--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
 		 <p class="bodytext">Each answer has been verified by the highest sources for accuracy</p>
      </article>
      <article>
-         <p class="bodytext">The quiz page is very interactive  has a unique feel, thanks to the various codes and lessons taught at Edinburg Napier.
-         The great attention to detail and interactivity also reflect the time dedicated to the site, and focus of the developer.
+         <p class="bodytext">The quiz page is very interactive  has a unique feel, thanks to the various codes and lessons taught at Edinburg Napier</p>
+         <p class="bodytext">The great attention to detail and interactivity also reflect the time dedicated to the site, and focus of the developer.</p>
 		</p>
 	 </article>
  </main>
