--- a/Scores.html
+++ b/Scores.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="Styles/nav.css">
     <link rel="stylesheet" href="Styles/footer.css">
-    <link rel="stylesheet" href="Styles/scores.css">
+    <link rel="stylesheet" href="Styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
