--- a/rules.html
+++ b/rules.html
@@ -17,13 +17,13 @@
     </article>
           <article>       
              
-                   <p class="text">1. You will have <span>15 seconds</span> to answer each question.</p>
-                   <p class="text">2. Once you select your answer, it can't be undone.</p>
-                   <p class="text">3. You can't select any option once time goes off.</p>
-                   <p class="text">4. You cannot go back to the previous question.</p>
-                   <p class="text">5. You can't exit from the Quiz while the game is being played.</p>
-                   <p class="text">6. Points are awarded on the basis of each correct answers.</p>
-                   <p class="text">7. You'll be awarded 10 points for each correct answers.</p>              
+                   <p class="bodytext">1. You will have <span>15 seconds</span> to answer each question.</p>
+                   <p class="bodytext">2. Once you select your answer, it can't be undone.</p>
+                   <p class="bodytext">3. You can't select any option once time goes off.</p>
+                   <p class="bodytext">4. You cannot go back to the previous question.</p>
+                   <p class="bodytext">5. You can't exit from the Quiz while the game is being played.</p>
+                   <p class="bodytext">6. Points are awarded on the basis of each correct answers.</p>
+                   <p class="bodytext">7. You'll be awarded 10 points for each correct answers.</p>              
 
         </article>
     </main>
